2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* e-icon-factory.h: Add an enum for icon sizes (temporarily has
	absolute pixel sizes assigned to it until I commit
	e-icon-factory.c changes - but only after all other code has been
	updated to use the enums).

2004-04-16  Michael Terry  <mike@mterry.name>

	* Makefile.am: Add e-icon-factory.[ch]
	* e-gui-utils.c: Use the icon theme via EIconFactory
	* e-icon-factory.[ch]: Move EIconFactory to e-util, and add icon theme
	support to the object so evolution uses them

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* e-signature-list.c (gconf_signatures_changed): Don't add an
	autogen signature if the new signature is the autogen signature.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyname_r): Implemented a similar
	workaround to the one I did for a gethostbyaddr_r() glibc bug
	here. Glibc will apparently return success for addresses such as
	"192..168.1.1" (note the double dot) and yet not have filled in
	the hostent properly.

2004-04-12  Jeffrey Stedfast  <fejj@ximian.com>

	Really fixes bug #56623

	* e-signature-list.c (gconf_signatures_changed): If we've had to
	"fix" any signatures by adding a uid, set the resave state on the
	list (only cared about if this is at initial load time).
	(e_signature_list_construct): If we've set any uids in
	signatures_changed(), then save the signature list back out.

2004-04-09  Jeffrey Stedfast  <fejj@ximian.com>

	* e-account.c (xml_set_identity): If we fail to set a sig_uid then
	try to extract the old style signature id and assume the migration
	code will fix us up (if not, nothing bad will happen anyway).

	* e-signature-list.c (gconf_signatures_changed): If the autogen
	signature isn't in the list (or isn't the first in the list), add
	it to the head of the list.

2004-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	Probably fixes bug #56623 and others?

	* e-signature-list.c (gconf_signatures_changed): Fixed to not use