@@ -26,12 +26,12 @@
 #include <gdk-pixbuf/gdk-pixbuf.h>
 
 enum {
-	E_ICON_SIZE_MENU          = 16,
-	E_ICON_SIZE_BUTTON        = 20,
-	E_ICON_SIZE_SMALL_TOOLBAR = 18,
-	E_ICON_SIZE_LARGE_TOOLBAR = 24,
-	E_ICON_SIZE_DND           = 32,
-	E_ICON_SIZE_DIALOG        = 48,
+	E_ICON_SIZE_MENU,
+	E_ICON_SIZE_BUTTON,
+	E_ICON_SIZE_SMALL_TOOLBAR,
+	E_ICON_SIZE_LARGE_TOOLBAR,
+	E_ICON_SIZE_DND,
+	E_ICON_SIZE_DIALOG,
 	E_ICON_NUM_SIZES
 };
 
